auto distribute successful master builds https://github.com/ensime/ensime-src/issues/398
and

clean up sbt
https://github.com/ensime/ensime-src/issues/399

--- a/.gitignore
+++ b/.gitignore
@@ -35,10 +35,10 @@ test_projects/anti-xml
 test_projects/rogue
 
 sublime*
-ensime.sublime*
-.ensime_port
+
+.ensime*
+TAGS
 
 src/main/scala/org/ensime/server/Test.scala
-.ensime_lucene
-.ensime_cache
+
 
