add .sbt to the cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ sudo: false
 cache:
   directories:
     - $HOME/.ivy2/cache
+    - $HOME/.sbt
 addons:
   apt_packages:
   # https://github.com/travis-ci/apt-package-whitelist
