--- a/.drone.yml
+++ b/.drone.yml
@@ -3,14 +3,15 @@ image: ensime/ensime:latest
 script:
   - sbt ++$SCALA_VERSION gen-ensime &&
     mkdir .ensime_cache &&
-    git clone --depth 1 https://github.com/ensime/ensime-emacs.git ensime-emacs &&
-    sbt ++$SCALA_VERSION clean test:compile it:compile doc &&
-    if [ $(git diff | wc -l) -ge 1 ] ; then
-      echo "Code formatting does not meet the project's standards:" ;
-      git --no-pager diff ;
-      exit 1 ;
-    fi &&
-    sbt ++$SCALA_VERSION test it:test &&
+    git clone --depth 1 https://github.com/edani/ensime-emacs.git ensime-emacs &&
+    (cd ensime-emacs && git checkout transient) &&
+#    sbt ++$SCALA_VERSION clean test:compile it:compile doc &&
+#    if [ $(git diff | wc -l) -ge 1 ] ; then
+#      echo "Code formatting does not meet the project's standards:" ;
+#      git --no-pager diff ;
+#      exit 1 ;
+#    fi &&
+#    sbt ++$SCALA_VERSION test it:test &&
     sbt ++$SCALA_VERSION publishLocal &&
     ensime-emacs/test/run_emacs_tests.sh &&
     if [ -n "$SONATYPE_USERNAME" ] && [ -n "$SONATYPE_PASSWORD" ] ; then
