review of slick upgrade, rewrite SearchService.refresh()

--- a/core/src/main/resources/application.conf
+++ b/core/src/main/resources/application.conf
@@ -31,6 +31,8 @@ akka {
       core-pool-size-factor = 2.0
       # maximum number of threads to cap factor-based number to
       core-pool-size-max = 10
+      # no limit to the task queue
+      task-queue-size = -1
     }
   }
 }
