--- a/.drone.yml
+++ b/.drone.yml
@@ -7,6 +7,7 @@ build:
     - EMACS=/opt/emacs-24.5/bin/emacs
     - AKKA_TEST_TIMEFACTOR=10
     - SBT_TASK_LIMIT=6
+    - COURSIER_MODE=update-local-changing,missing
   commands:
     - if $(git grep -qE "TODO|FIXME" -- `git ls-files | grep -v .drone.yml`) ; then
         echo "Please remove TODO or FIXME. Create an issue at GitHub instead." ;
