--- a/.drone.yml
+++ b/.drone.yml
@@ -15,7 +15,7 @@ build:
     - host `curl -s http://httpbin.org/ip | jq -r '.origin'` || true ;
     - sbt ++$SCALA_VERSION gen-ensime ;
       sbt ++$SCALA_VERSION clean test:compile it:compile doc ;
-      if [ $(git diff | wc -l) -ge 1 ] ; then
+      if $(! git diff --exit-code --quiet) ; then
         echo "Code formatting does not meet the project's standards:" ;
         git --no-pager diff ;
         exit 1 ;
