--- a/.drone.yml
+++ b/.drone.yml
@@ -6,6 +6,7 @@ build:
     - SONATYPE_PASSWORD=$$SONATYPE_PASSWORD
     - EMACS=/opt/emacs-24.5/bin/emacs
     - AKKA_TEST_TIMEFACTOR=10
+    - SBT_TASK_LIMIT=6
   commands:
     - if $(git grep -qE "TODO|FIXME" -- `git ls-files | grep -v .drone.yml`) ; then
         echo "Please remove TODO or FIXME. Create an issue at GitHub instead." ;
@@ -29,23 +30,12 @@ build:
         cask install ;
         cask build ;
         test/run_emacs_tests.sh ;
+        cd $CI_BUILD_DIR ;
       fi
     - if [ -z "$CI_PULL_REQUEST" ] ; then
-        cd $CI_BUILD_DIR ;
         sbt ++$SCALA_VERSION publish ;
         sbt ++$SCALA_VERSION ensime/assembly ;
-        ccdecrypt .id_rsa.cpt -E SONATYPE_PASSWORD ;
-        chmod 0600 .id_rsa ;
-        scp -o StrictHostKeyChecking=no -i .id_rsa target/scala-*/*-assembly.jar typelevel@docs.typelevel.org:ensime.typelevel.org/ ;
       fi
-
-# TODO https://github.com/ensime/ensime-server/issues/1091
-#    - if [ "${SCALA_VERSION}" = "2.11.8" ] ; then
-#        sbt ++$SCALA_VERSION clean ;
-#        sbt ++$SCALA_VERSION coverage test ;
-#        sbt ++$SCALA_VERSION coverage it:test ;
-#        sbt ++$SCALA_VERSION coverageAggregate ;
-#      fi
 
 matrix:
   SCALA_VERSION:
@@ -59,3 +49,9 @@ deploy:
     when:
       matrix:
         SCALA_VERSION: 2.11.8
+  sftp:
+    host: docs.typelevel.org
+    username: typelevel
+    destination_path: ensime.typelevel.org/
+    files: 
+      - target/scala-*/*-assembly.jar
