--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,7 +32,5 @@ cache:
   - C:\Users\appveyor\.m2
   - C:\Users\appveyor\.ivy2
   - C:\Program Files\Java\jdk1.7.0\src.zip
-artifacts:
-  - path: '**\*.log'
-    name: logs
-    type: zip
+on_failure:
+  - appveyor PushArtifact -Path '**\*.log' -FileName logs -Type zip
