--- a/.drone.yml
+++ b/.drone.yml
@@ -22,36 +22,14 @@ build:
         exit 1 ;
       fi
     - sbt ++$SCALA_VERSION test it:test
-    - if [ "${SCALA_VERSION}" = "2.11.8" ] ; then
-        sbt ++$SCALA_VERSION publishLocal ;
-        git clone --depth 1 https://github.com/ensime/ensime-emacs.git ensime-emacs ;
-        cd ensime-emacs ;
-        cask pkg-file ;
-        cask install ;
-        cask build ;
-        test/run_emacs_tests.sh ;
-        cd $CI_BUILD_DIR ;
-      fi
-    - if [ -z "$CI_PULL_REQUEST" ] ; then
-        sbt ++$SCALA_VERSION publish ;
-        sbt ++$SCALA_VERSION ensime/assembly ;
-      fi
+    - sbt ++$SCALA_VERSION publishLocal ;
+      git clone --depth 1 https://github.com/ensime/ensime-emacs.git ensime-emacs ;
+      cd ensime-emacs ;
+      cask pkg-file ;
+      cask install ;
+      cask build ;
+      test/run_emacs_tests.sh ;
 
 matrix:
   SCALA_VERSION:
-    - 2.11.8
-    - 2.10.6
-
-deploy:
-  dockerhub:
-    token: $$DOCKER_TRIGGER_TOKEN
-    repo: ensime/ensime
-    when:
-      matrix:
-        SCALA_VERSION: 2.11.8
-  sftp:
-    host: docs.typelevel.org
-    username: typelevel
-    destination_path: ensime.typelevel.org/
-    files: 
-      - target/scala-*/*-assembly.jar
+    - 2.11.8-tl-201604151108
