disable the windows debugging tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,18 @@ os:
 env:
   global:
     - AKKA_TEST_TIMEFACTOR=10
-    - SBT_TASK_LIMIT=2
-    - COURSIER_MODE=update-local-changing,missing
+    - SBT_TASK_LIMIT=4
 script:
   - curl https://raw.githubusercontent.com/paulp/sbt-extras/master/sbt -o sbt ; chmod 755 sbt
   - ./sbt gen-ensime
   - ./sbt test:compile it:compile
   - ./sbt test it:test
+  - rm -rf $HOME/.coursier/cache/v1/https/oss.sonatype.org
+cache:
+  directories:
+  - $HOME/.sbt
+  - $HOME/.ivy2
+  - $HOME/.m2
+  - $HOME/.coursier
+notifications:
+  email: false
