--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,16 +18,16 @@ install:
   - cmd: SET JDK_HOME=C:\Program Files\Java\jdk1.7.0
   - cmd: SET JAVA_HOME=C:\Program Files\Java\jdk1.7.0
   - cmd: SET PATH=C:\sbt\sbt\bin;%JDK_HOME%\bin;%PATH%
-  - cmd: SET SBT_OPTS=-XX:MaxPermSize=256m -Xss2m -Xms512m -Xmx512m
+  - cmd: SET SBT_OPTS=-XX:MaxPermSize=256m -Xss2m -Xms750m -Xmx750m
   - cmd: SET AKKA_TEST_TIMEFACTOR=10
   - cmd: SET SBT_TASK_LIMIT=2
-  - cmd: SET COURSIER_MODE=update-local-changing,missing
 build_script:
   - sbt clean compile test:compile it:compile
 before_test:
   - sbt gen-ensime
 test_script:
-  - sbt test it:test
+  - sbt test "testOnly -- -l Debugger"
+  - rmdir /s /q C:\Users\appveyor\.coursier\cache\v1\https\oss.sonatype.org
 cache:
   - C:\sbt\
   - C:\Users\appveyor\.m2
@@ -35,4 +35,6 @@ cache:
   - C:\Users\appveyor\.coursier
   - C:\Program Files\Java\jdk1.7.0\src.zip
 on_failure:
-  - appveyor PushArtifact -Path '**\*.log' -FileName logs -Type zip
+  - appveyor PushArtifact -Path core/test.log
+  - appveyor PushArtifact -Path core/it.log
+
