--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,7 +25,7 @@ build_script:
   - sbt ensimeConfig
   - sbt compile test:compile it:compile
 test_script:
-  - sbt test "it:testOnly -- -l Debugger"
+  - sbt test it:test
   - rmdir /s /q C:\Users\appveyor\.coursier\cache\v1\https\oss.sonatype.org
 cache:
   - C:\sbt\
